[package]
name = "fk-zyre"
version = "0.2.1"
edition = "2024"
description = "High-level abstraction around the Zyre library."
authors = ["Schoonology <michael.r.schoonmaker@gmail.com>", "Tomas FS <tomas@fik1.net>"]
repository = "https://github.com/straend/rust-zyre"
keywords = ["zeromq", "services", "discovery", "network"]
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"

[dependencies]
fk-zyre-sys = "0.1.1"
lazy_static = "1.5.0"
